opam-version: "2.0"
name: "pbench"
maintainer: "Mike Rainey"
authors: [ "Arthur Chargueraud & Mike Rainey" ]
license: "BSD-3-clause"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.04.1"}
  "dune" {build & >= "1.0"}
]
synopsis: "The pbench toolkit is a software framework whose purpose is to help programmers benchmark their programs, with particular support for parallel programs."

